engine/tests/fixtures/invalid/http-api-semantics/proj-api.tg
projection proj_api {
  name "API"
  description "Bad HTTP API semantics"
  type api_contract

  realizes [cap_export_tasks, cap_get_task_export_job, cap_download_task_export]
  outputs [endpoints]

  endpoints {
    cap_export_tasks method POST path /tasks/export success 202 auth user request body
    cap_get_task_export_job method GET path /task-exports/:job_id success 200 auth user request path
    cap_download_task_export method GET path /task-exports/:job_id/download success 200 auth user request path
  }

  async_jobs {
    cap_export_tasks mode job accepted 202 location_header Location retry_after_header Retry-After status_path /task-exports/:job_id job shape_output_task_export_job
  }

  async_status {
    cap_get_task_export_job async_for cap_export_tasks state_field ghost completed completed failed failed download_capability cap_missing_download
  }

  downloads {
    cap_download_task_export async_for cap_export_tasks media zip filename export.zip disposition stream
  }

  authorization {
    cap_export_tasks ownership team
    cap_get_task_export_job ownership_field owner_id
  }

  callbacks {
    cap_export_tasks event export_completed target_field missing_callback method GET payload shape_missing success 20x
  }

  status active
}
